--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.3",
     "express-fileupload": "^1.3.1",
     "express-validation": "^4.0.1",
+    "firebase-admin": "^10.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.0",
     "mongoose-aggregate-paginate-v2": "^1.0.6",
