--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongoose": "^6.3.0",
     "mongoose-aggregate-paginate-v2": "^1.0.6",
     "mongoose-paginate-v2": "^1.6.3",
-    "nodemailer": "^6.7.3"
+    "nodemailer": "^6.7.3",
+    "uuid": "^8.3.2"
   }
 }
