--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "trailingComma": "es5"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.7",
     "cors": "^2.8.5",
@@ -34,6 +35,7 @@
     "mongoose": "^6.3.0",
     "mongoose-aggregate-paginate-v2": "^1.0.6",
     "mongoose-paginate-v2": "^1.6.3",
+    "node-schedule": "^2.1.0",
     "nodemailer": "^6.7.3",
     "uuid": "^8.3.2"
   }
