--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mongoose": "^6.3.0",
     "mongoose-aggregate-paginate-v2": "^1.0.6",
     "mongoose-paginate-v2": "^1.6.3",
+    "node-geocoder": "^4.1.0",
     "node-schedule": "^2.1.0",
     "nodemailer": "^6.7.3",
     "uuid": "^8.3.2"
