--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "express-fileupload": "^1.3.1",
     "express-validation": "^4.0.1",
     "firebase-admin": "^10.2.0",
+    "get-audio-duration": "^3.1.0",
+    "get-video-duration": "^4.1.0",
     "iap": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.0",
