--- a/package.json
+++ b/package.json
@@ -31,13 +31,12 @@
     "express-fileupload": "^1.3.1",
     "express-validation": "^4.0.1",
     "firebase-admin": "^10.2.0",
-    "get-audio-duration": "^3.1.0",
-    "get-video-duration": "^4.1.0",
     "iap": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.0",
     "mongoose-aggregate-paginate-v2": "^1.0.6",
     "mongoose-paginate-v2": "^1.6.3",
+    "music-metadata": "^7.12.4",
     "node-apple-receipt-verify": "^1.12.1",
     "node-schedule": "^2.1.0",
     "nodemailer": "^6.7.3",
