add translations for notif types

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,9 @@ SMTP_HOST = smtpHost
 SMTP_PORT = smtpPort
 SMTP_USER = smtpUser
 SMTP_PASS = smtpPass
+
+APP_IBI = APP_IBI
+APP_SUB_SECRET = APP_SUB_SECRET
+
+MAILCHIMP_API_KEY = MAILCHIMP_API_KEY
+MAILCHIMP_SERVER_PREFIX = MAILCHIMP_SERVER_PREFIX
